<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#C8C8C8"
    tools:context=".ui.neighbour_list.NeighbourDetailActivity">

    <ImageView
        android:id="@+id/neighbour_detail_photo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:gravity="bottom"
        tools:text="Neighbour Name" />

    <ImageView
        android:id="@+id/button_previous_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="@+id/neighbour_detail_photo"
        app:layout_constraintTop_toTopOf="@+id/neighbour_detail_photo"
        android:src="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:id="@+id/textview_neighbour_name_portrait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Prenom"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="@+id/neighbour_detail_photo"
        app:layout_constraintBottom_toBottomOf="@+id/neighbour_detail_photo" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neighbour_detail_photo">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp">

            <TextView
                android:id="@+id/textview_neighbour_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                tools:text="Neighbour Name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/neighbour_detail_photo" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_neighbour_name"/>

            <ImageView
                android:id="@+id/image_address"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                app:srcCompat="@drawable/ic_baseline_location_on_24" />

            <TextView
                android:id="@+id/textview_address"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/image_address"
                app:layout_constraintStart_toEndOf="@+id/image_address"
                app:layout_constraintTop_toTopOf="@+id/image_address"
                android:layout_marginStart="12dp"
                tools:text="Neighbour's address is here!" />

            <ImageView
                android:id="@+id/image_phone_number"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintTop_toBottomOf="@+id/image_address"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                app:srcCompat="@drawable/ic_baseline_phone_24" />

            <TextView
                android:id="@+id/textview_phone_number"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/image_phone_number"
                app:layout_constraintStart_toEndOf="@+id/image_phone_number"
                app:layout_constraintTop_toTopOf="@+id/image_phone_number"
                android:layout_marginStart="12dp"
                tools:text="Neighbour's Phone number" />

            <ImageView
                android:id="@+id/image_facebook_link"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_phone_number"
                android:layout_marginTop="12dp"
                app:srcCompat="@drawable/ic_baseline_language_24" />

            <TextView
                android:id="@+id/textview_facebook_link"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/image_facebook_link"
                app:layout_constraintStart_toEndOf="@+id/image_facebook_link"
                app:layout_constraintTop_toTopOf="@+id/image_facebook_link"
                android:layout_marginStart="12dp"
                tools:text="Neighbour's Facebook Link" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view1">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp">

            <TextView
                android:id="@+id/textViewAboutMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="12dp"
                tools:text="A propos de moi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cardView2" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewAboutMe" />

            <TextView
                android:id="@+id/textViewAboutMeInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="All you need to know about your neighbour is here !!"
                android:textSize="14sp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_add_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:clickable="true"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="@+id/card_view1"
        app:layout_constraintTop_toTopOf="@+id/neighbour_detail_photo"
        app:srcCompat="@drawable/ic_baseline_star_is_favorite_false" />

</android.support.constraint.ConstraintLayout>