<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="activity_new_neighbour">New neighbour</string>
    <string name="activity_neighbour_detail">Neighbour Detail</string>
</resources>
